syntax = "proto3";

package inventory;

option go_package = "/inventory";

// 库存服务
service InventoryService {
    // 查询单个商品库存
    rpc GetStock (GetStockRequest) returns (GetStockResponse);

    // 扣减商品库存
    rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse);

    // 增加商品库存
    rpc IncreaseStock (IncreaseStockRequest) returns (IncreaseStockResponse);

    // 批量查询库存
    rpc BatchGetStock (BatchGetStockRequest) returns (BatchGetStockResponse);
}

// 查询库存请求
message GetStockRequest {
    int32 product_id = 1; // 商品ID
}

// 查询库存响应
message GetStockResponse {
    int32 product_id = 1; // 商品ID
    int32 stock = 2;      // 库存数量
}

// 扣减库存请求
message DecreaseStockRequest {
    int32 product_id = 1; // 商品ID
    int32 quantity = 2;   // 扣减的数量
}

// 扣减库存响应
message DecreaseStockResponse {
    bool success = 1;      // 扣减是否成功
}

// 增加库存请求
message IncreaseStockRequest {
    int32 product_id = 1; // 商品ID
    int32 quantity = 2;   // 增加的数量
}

// 增加库存响应
message IncreaseStockResponse {
    bool success = 1;     // 增加是否成功
}

// 批量查询库存请求
message BatchGetStockRequest {
    repeated int32 product_ids = 1; // 商品ID列表
}

// 批量查询库存响应
message BatchGetStockResponse {
    repeated StockInfo stock_info = 1; // 商品库存信息列表
}

// 商品库存信息
message StockInfo {
    int32 product_id = 1; // 商品ID
    int32 stock = 2;      // 库存数量
}